# ClassificationPointNet3D

./: .gitignore  README.md  commands.py  notebooka1054845b4.ipynb  pyproject.toml
3D_classification/: NLLLoss.py  PointNet3D.py  classifiers.py  config.py  datasets.py  train.py  utils.py
app/: infer.py  model_net_10.py  point_net_3d.py  train.py  utils.py
notebooks/: README.md  notebook.ipynb
